add keyword translation to invoice reminder

--- a/Frontend/public/locales/he/reminders.json
+++ b/Frontend/public/locales/he/reminders.json
@@ -1,6 +1,9 @@
 {
   "invoice": {
     "dateOfDebit": "תאריך חיוב",
-    "renew": "חידוש"
+    "renew": "חידוש",
+    "month": "חודש",
+    "quarter": "רבעון",
+    "year": "שנה"
   }
 }
