rename client to customer in components

--- a/Frontend/public/locales/en/appLayout.json
+++ b/Frontend/public/locales/en/appLayout.json
@@ -4,7 +4,7 @@
     "settings": "settings",
     "reminders": "reminders",
     "activities": "activities",
-    "clients": "clients",
+    "customers": "customers",
     "reports": "reports"
   }
 }
