--- a/Frontend/public/locales/he/appLayout.json
+++ b/Frontend/public/locales/he/appLayout.json
@@ -4,7 +4,7 @@
     "settings": "הגדרות",
     "reminders": "תזכורות",
     "activities": "פעילויות",
-    "clients": "לקוחות",
+    "customers": "לקוחות",
     "reports": "דוחות"
   }
 }
