add translation for Pagination

--- a/Frontend/public/locales/he/components.json
+++ b/Frontend/public/locales/he/components.json
@@ -1,3 +1,15 @@
 {
-  "empty": "{{resource}} לא קיים מידע על"
+  "empty": "{{resource}} לא קיים מידע על",
+  "pagination": {
+    "button": {
+      "next": "הבא",
+      "previous": "הקודם"
+    },
+    "Text": {
+      "showing": "מראה",
+      "to": "עד",
+      "of": "מתוך",
+      "results": "תוצאות"
+    }
+  }
 }
