fix translation key for pagination

--- a/Frontend/public/locales/he/components.json
+++ b/Frontend/public/locales/he/components.json
@@ -5,7 +5,7 @@
       "next": "הבא",
       "previous": "הקודם"
     },
-    "Text": {
+    "summary": {
       "showing": "מראה",
       "to": "עד",
       "of": "מתוך",
