add translation for page not found

--- a/Frontend/public/locales/en/pageNotFound.json
+++ b/Frontend/public/locales/en/pageNotFound.json
@@ -1,5 +1,5 @@
 {
-  "errorMessageFirstPart": "Look like you ",
+  "errorMessageFirstPart": "Look like you.... ",
   "errorMessageSecondPart": "lost in the space",
   "button": "GO BACK HOME"
 }
