--- a/Frontend/public/locales/he/pageNotFound.json
+++ b/Frontend/public/locales/he/pageNotFound.json
@@ -1,4 +1,5 @@
 {
-  "errorMessage": ["זה נראה", "הלכת לאיבוד בחלל"],
-  "button": "לך לדף הבית"
+  "errorMessageFirstPart": "...נראה ש ",
+  "errorMessageSecondPart": "הלכת לאיבוד בחלל",
+  "button": "לך לדף בית"
 }
