add translation for buttons

--- a/Frontend/public/locales/he/customers.json
+++ b/Frontend/public/locales/he/customers.json
@@ -14,7 +14,7 @@
     "cloud-mail": "מיילים בענן",
     "charge": "חיוב"
   },
-  "detail": {
+  "details": {
     "customerID": "מספר לקוח",
     "customerShortName": "שם מקוצר",
     "customerStatus": "סטטוס לקוח",
