--- a/Frontend/public/locales/he/components.json
+++ b/Frontend/public/locales/he/components.json
@@ -10,6 +10,7 @@
       "to": "עד",
       "of": "מתוך",
       "results": "תוצאות"
-    }
+    },
+    "buttons": { "edit": "ערוך", "delete": "מחק" }
   }
 }
