--- a/Frontend/public/locales/he/serviceRenews.json
+++ b/Frontend/public/locales/he/serviceRenews.json
@@ -1,6 +1,8 @@
 {
   "renew-table": {
-    "header": "תזכורת"
+    "header": "תזכורת",
+    "error-message-fetch": "אירעה שגיאה בטעינת התזכורות"
+    
   },
   "delete": {
     "confirmation": "האם אתה בטוח שברצונך למחוק את החיוב?",
@@ -8,7 +10,7 @@
     "toast-message-success": "התזכורת נמחקה בהצלחה",
     "toast-message-error": "אירעה שגיאה במחיקת התזכורת"
   },
-  "renew": {
+  "add": {
     "button": "חידוש",
     "toast-title": "חידוש מוצרים",
     "toast-message-success": "התזכורת חודשה בהצלחה",
