add translation for 'add' button in components json

--- a/Frontend/public/locales/he/components.json
+++ b/Frontend/public/locales/he/components.json
@@ -12,5 +12,5 @@
       "results": "תוצאות"
     }
   },
-  "buttons": { "edit": "ערוך", "delete": "מחק" }
+  "buttons": { "edit": "ערוך", "delete": "מחק", "add": "הוספה" }
 }
