add product and service renews to MainNav

--- a/Frontend/public/locales/he/appLayout.json
+++ b/Frontend/public/locales/he/appLayout.json
@@ -3,6 +3,8 @@
     "account": "חשבון",
     "settings": "הגדרות",
     "reminders": "תזכורות",
+    "product-renews": "חידושי מוצרים",
+    "service-renew": "חידושי שירות",
     "activities": "פעילויות",
     "customers": "לקוחות",
     "reports": "דוחות"
