--- a/Frontend/public/locales/he/serviceRenews.json
+++ b/Frontend/public/locales/he/serviceRenews.json
@@ -1,8 +1,22 @@
 {
   "renew-table": {
     "header": "תזכורת",
-    "error-message-fetch": "אירעה שגיאה בטעינת התזכורות"
-    
+    "title": "תזכורות לחוזי שירות",
+    "error-message-fetch": "אירעה שגיאה בטעינת התזכורות",
+    "contractID": "מספר חוזה",
+    "customerID": "מספר לקוח",
+    "customerShortName": "שם לקוח",
+    "startDateOfContract": "תאריך התחלה",
+    "finishDateOfContract": "תאריך סיום",
+    "contractPrice": "מחיר חוזה",
+    "periodKind": "תקופת שירות",
+    "contactDescription": "פרטים נוספים",
+    "renew-button": "חידוש",
+    "period": {
+      "MONTHLY": "חודש",
+      "QUARTERLY": "רבעון",
+      "YEARLY": "שנה"
+    }
   },
   "delete": {
     "confirmation": "האם אתה בטוח שברצונך למחוק את החיוב?",
