change translation to Empty

--- a/Frontend/public/locales/he/components.json
+++ b/Frontend/public/locales/he/components.json
@@ -1,5 +1,5 @@
 {
-  "empty": "{{resource}} לא קיים מידע על",
+  "empty": "{{resource}} לא קיימים נתונים על",
   "pagination": {
     "button": {
       "next": "הבא",
