fix app layout translation for service renew

--- a/Frontend/public/locales/he/appLayout.json
+++ b/Frontend/public/locales/he/appLayout.json
@@ -4,7 +4,7 @@
     "settings": "הגדרות",
     "reminders": "תזכורות",
     "product-renews": "חידושי מוצרים",
-    "service-renew": "חידושי שירות",
+    "service-renews": "חידושי שירות",
     "activities": "פעילויות",
     "customers": "לקוחות",
     "reports": "דוחות"
