add renew-title translation to service json

--- a/Frontend/public/locales/he/serviceRenews.json
+++ b/Frontend/public/locales/he/serviceRenews.json
@@ -12,6 +12,7 @@
     "periodKind": "תקופת שירות",
     "contactDescription": "פרטים נוספים",
     "renew-button": "חידוש",
+    "renew-title": "חיודש חוזה",
     "period": {
       "MONTHLY": "חודש",
       "QUARTERLY": "רבעון",
