fix translation service renew

--- a/Frontend/public/locales/he/serviceRenews.json
+++ b/Frontend/public/locales/he/serviceRenews.json
@@ -12,7 +12,7 @@
     "periodKind": "תקופת שירות",
     "contactDescription": "פרטים נוספים",
     "renew-button": "חידוש",
-    "renew-title": "חיודש חוזה",
+    "renew-title": "חידוש חוזה שירות",
     "period": {
       "MONTHLY": "חודש",
       "QUARTERLY": "רבעון",
