add delete-alert to component json 'he'

--- a/Frontend/public/locales/he/components.json
+++ b/Frontend/public/locales/he/components.json
@@ -19,5 +19,6 @@
     "cancel": "בטל",
     "save": "שמור",
     "update": "עדכן"
-  }
+  },
+  "delete-alert": "האם אתה בטוח שאתה רוצה למחוק את {{resourceName}}?\nפעולה זו לא ניתנת לביטול"
 }
