fix toast-title translation in serviceRenew.json

--- a/Frontend/public/locales/he/serviceRenews.json
+++ b/Frontend/public/locales/he/serviceRenews.json
@@ -24,9 +24,10 @@
       "required": "שדה זה נדרש"
     }
   },
+  "title": "חוזה שירות",
   "delete": {
     "confirmation": "האם אתה בטוח שברצונך למחוק את החיוב?",
-    "toast-title": "מחיקת חידוש מוצרים",
+    "toast-title": "מחיקת חוזה שירות",
     "toast-message-success": "התזכורת נמחקה בהצלחה",
     "toast-message-error": "אירעה שגיאה במחיקת התזכורת"
   },
