fix delete alert in he translation

--- a/Frontend/public/locales/he/components.json
+++ b/Frontend/public/locales/he/components.json
@@ -20,5 +20,5 @@
     "save": "שמור",
     "update": "עדכן"
   },
-  "delete-alert": "האם אתה בטוח שאתה רוצה למחוק את {{resourceName}}ה?\nפעולה זו לא ניתנת לביטול"
+  "delete-alert": "ה האם אתה בטוח שאתה רוצה למחוק את{{resourceName}}?\nפעולה זו לא ניתנת לביטול"
 }
