add 'title' to customers.json

--- a/Frontend/public/locales/he/customers.json
+++ b/Frontend/public/locales/he/customers.json
@@ -4,7 +4,8 @@
     "customerName": "שם הלקוח",
     "address": "כתובת",
     "city": "עיר",
-    "status": "סטטוס"
+    "status": "סטטוס",
+    "title": "לקוחות"
   },
   "status": {
     "IN_SERVICE": "שירות",
