--- a/Frontend/public/locales/he/productRenews.json
+++ b/Frontend/public/locales/he/productRenews.json
@@ -1,6 +1,16 @@
 {
   "renew-table": {
-    "header": "תזכורת"
+    "header": "תזכורת",
+    "customerID": "מספר לקוח",
+    "custShortName": "שם לקוח",
+    "systemDetailID": "מספר תזכורת",
+    "productDetailDescription": "תיאור מוצר",
+    "notes1": "הערות",
+    "notes2": "הערות 2",
+    "notes3": "הערות 3",
+    "notes4": " הערות 4",
+    "validityTill": "תוקף",
+    "renew-button": "חידוש"
   },
   "delete": {
     "confirmation": "האם אתה בטוח שברצונך למחוק את החיוב?",
