change 'header' key translation in productRenew.json

--- a/Frontend/public/locales/he/productRenews.json
+++ b/Frontend/public/locales/he/productRenews.json
@@ -9,7 +9,7 @@
   "notes4": " הערות 4",
   "validityTill": "תוקף",
   "renew-table": {
-    "header": "תזכורת",
+    "header": "תזכורת לחידוש מוצר",
     "renew-button": "חידוש"
   },
   "delete": {
