--- a/Frontend/public/locales/he/serviceRenews.json
+++ b/Frontend/public/locales/he/serviceRenews.json
@@ -6,7 +6,7 @@
   "finishDateOfContract": "תאריך סיום",
   "contractPrice": "מחיר חוזה",
   "periodKind": "תקופת שירות",
-  "contactDescription": "פרטים נוספים",
+  "contractDescription": "פרטים נוספים",
   "cancel-button": "ביטול",
   "renew-button": "חידוש",
   "renew-title": "חידוש חוזה שירות",
